--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -3,7 +3,8 @@
 <article
     class="justify-self-center mx-auto mb-16 px-6 sm:px-4 md:px-0 prose dark:prose-invert prose-slate lg:prose-lg hover:prose-a:text-sky-500">
     <h1><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
-    {{ .Content }}
+    <p>{{ .Date | time.Format "Jan 02, 2006"}}</p>
+    <p>{{ .Summary }}</p>
 </article>
 {{ end }}
 {{ end }}
