--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,5 +2,17 @@
 <article class="justify-self-center mx-auto text-center prose dark:prose-invert prose-slate lg:prose-lg">
     <h1 class="font-serif font-extralight text-5xl welcome-headline">{{ .Title }}</h1>
     {{ .Content }}
+    <div class="px-8">
+        <h2 class="font-serif font-extralight welcome-headline">Recent Posts</h2>
+        {{ range (where site.RegularPages "Section" "posts" )}}
+        <article
+            class="flex justify-between items-end gap-8 text-left mx-auto mb-16 px-6 sm:px-4 md:px-0 prose dark:prose-invert prose-slate lg:prose-lg hover:prose-a:text-sky-500">
+            <span class="text-2xl">
+                <a href="{{ .Permalink }}">{{ .Title }}</a>
+            </span>
+            <span class="justify-center">{{ .Date | time.Format "Jan 02, 2006"}}</span>
+        </article>
+        {{ end }}
+    </div>
 </article>
 {{ end }}
